# CodeVector-Assignment

./: README.md  pyproject.toml
db/: 01_schema.sql  02_seed.sql  03_rls.sql  04_index.sql
src/codevector/api/: main.py  schema.py
ui/src/: App.tsx
ui/src/components/: ProductCatalog.tsx
