[project]
name = "codevector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.138.0",
    "python-dotenv>=1.2.2",
    "supabase>=2.31.0",
]


[tool.fastapi]
entrypoint = "codevector.api.main:app"

[build-system]
requires = ["uv_build>=0.11.23,<0.12"]
build-backend = "uv_build"
